feat(i18n): 添加苹果、树和主页的国际化支持，更新文本内容

--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -2,6 +2,21 @@
   "page": {
     "scroll": {
       "scrollTip": "向上滚动以查看下一页"
+    },
+    "apple": {
+      "title": "上帝丢了一个苹果给我，感谢上帝，它很好吃！",
+      "subtitle": "但是下次最好不要砸在我的脑袋上了 😵‍💫",
+      "background": "只是一个苹果"
+    },
+    "home": {
+      "background": "只是一只猫",
+      "title": "废物回收是什么... <br> 大概是...",
+      "subtitle": "请不要为难我，我只是一个小猫咪！"
+    },
+    "tree": {
+      "background": "只是一棵树",
+      "title": "种一棵树最好的时间是十年前，其次是现在",
+      "subtitle": "达到目的的方法数不胜数，但我只想成为一只猫。"
     }
   }
 }
