feat: 添加时间轴组件的国际化支持，更新英文和中文翻译

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -17,6 +17,47 @@
       "background": "Just a tree",
       "title": "The best time to plant a tree was ten years ago, followed by now",
       "subtitle": "There are countless ways to achieve the goal, but I just want to be a cat."
+    },
+    "timeline": {
+      "greeting": "Hey, what brings you here!",
+      "iAm": "I am ",
+      "alsoCallMe": "You can also call me ",
+      "liveIn": "Living in ",
+      "locationName": "Liangzhu, Hangzhou",
+      "welcomeVisit": "Welcome to drop by 🤓",
+      "thanksIllustration": "Thanks to raisa for the illustration 🙏",
+      "nonCs": "Non-CS major; self-taught programming & design in college out of interest",
+      "favoriteStacks": "Favorite tech stacks & tools:",
+      "graduate2022": "Graduated in 2022",
+      "graduateStory": " then moved to Hangzhou, explored remote work with various scattered projects to make a living",
+      "addictedToPhotographyPrefix": "Got into ",
+      "photography": "photography",
+      "photographyBought": "Bought a Nikon Z5; here is a light fresh-toned set I love",
+      "liangzhuPark": "Liangzhu Archaeological Park",
+      "likePrefix": "I like ",
+      "cooking": "cooking",
+      "chefWish": "and sometimes wish to be a chef",
+      "favoriteDish": "Favorite: noodles with shredded pork & pickled long beans",
+      "likeLandlordDogPrefix": "Really like ",
+      "landlordDog": "my landlord's dogs",
+      "missDogs": ", haven't seen them for a long time since moving",
+      "dogsNames": "Xiaoguang (black & white) and Biaobiao (brown)",
+      "date202405": "May 2024",
+      "join": "Joined ",
+      "teamMember": " and became part of the build team",
+      "date202408": "Aug 2024",
+      "afterAdvx2024": "After Advx2024 ended",
+      "meetingRecord": "A snapshot from a meeting",
+      "date202507End": "End of Jul 2025",
+      "afterAdvx2025": "After Advx2025 ended, ",
+      "quitBonjour": "left Bonjour",
+      "lifeMess": "Plus a relationship ended a month earlier; life felt tangled",
+      "wantImprove": "Hope to reorganize myself, learn new things, and ease anxiety",
+      "recentDoing": "Currently working on:",
+      "latestActivities": "My latest activities:",
+      "findMe": "Find me:",
+      "nameZh": "Yu Changye",
+      "nameAlias": "rabithua"
     }
   }
 }
