--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -17,6 +17,47 @@
       "background": "只是一棵树",
       "title": "种一棵树最好的时间是十年前，其次是现在",
       "subtitle": "达到目的的方法数不胜数，但我只想成为一只猫。"
+    },
+    "timeline": {
+      "greeting": "欸，你怎么来了！",
+      "iAm": "我是",
+      "alsoCallMe": "也可以叫我",
+      "liveIn": "现居",
+      "locationName": "杭州良渚",
+      "welcomeVisit": "欢迎来串门～ 🤓",
+      "thanksIllustration": "感谢 raisa 制作的插画 🙏",
+      "nonCs": "非计算机专业，大学期间出于兴趣自学编程和设计",
+      "favoriteStacks": "爱用的技术栈和工具：",
+      "graduate2022": "2022 年毕业",
+      "graduateStory": "随小弟来到杭州，艰难探索远程职业，做过一些杂乱的项目，算是勉强维持生计",
+      "addictedToPhotographyPrefix": "期间染上了",
+      "photography": "摄影",
+      "photographyBought": "买了台 Nikon Z5，下面是一组很喜欢的小清新调色",
+      "liangzhuPark": "良渚遗址公园",
+      "likePrefix": "喜欢",
+      "cooking": "做饭",
+      "chefWish": "偶尔希望成为一名大厨",
+      "favoriteDish": "最爱的酸豆角肉丝浇面",
+      "likeLandlordDogPrefix": "很喜欢",
+      "landlordDog": "房东的狗",
+      "missDogs": "，搬走后很久没有见到他们了",
+      "dogsNames": "小光（黑白色）和表表（咖啡色）",
+      "date202405": "2024 年 5 月",
+      "join": "加入",
+      "teamMember": "成为了构建团队的一员",
+      "date202408": "2024 年 8 月",
+      "afterAdvx2024": "Advx2024 活动结束后",
+      "meetingRecord": "某次开会实况",
+      "date202507End": "2025 年 7 月末",
+      "afterAdvx2025": "Advx2025 活动结束后，",
+      "quitBonjour": "退出了 Bonjour",
+      "lifeMess": "加上一个月前结束了一年的恋爱，愈发感觉自己的生活像一团乱麻",
+      "wantImprove": "希望能好好整理一下自己，学习点新东西，减少焦虑",
+      "recentDoing": "最近在做：",
+      "latestActivities": "这里有我的最新动态：",
+      "findMe": "找到我:",
+      "nameZh": "于长野",
+      "nameAlias": "rabithua"
     }
   }
 }
