feat: 添加个人座右铭和高亮描述，更新时间轴组件的国际化支持

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -57,7 +57,9 @@
       "latestActivities": "My latest activities:",
       "findMe": "Find me:",
       "nameZh": "Yu Changye",
-      "nameAlias": "rabithua"
+      "nameAlias": "rabithua",
+      "motto": "Trying hard to find a lifelong beloved career (or at least a job to make a living before savings run out).",
+      "mottoHighlight": "I don't want to be confined to programming; exploring UI & interaction design, how to become a photographer or a chef, while also learning to organize my life."
     }
   }
 }
