--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -57,7 +57,9 @@
       "latestActivities": "这里有我的最新动态：",
       "findMe": "找到我:",
       "nameZh": "于长野",
-      "nameAlias": "rabithua"
+      "nameAlias": "rabithua",
+      "motto": "努力寻找一生所爱的事业 （或者在存款耗尽前找到维持生计的工作）。",
+      "mottoHighlight": "不想被限定为程序开发，在探索 UI 和交互设计，如何成为摄影师或者大厨，同时也在学习如何整理好自己的生活。"
     }
   }
 }
