feat: 添加朋友列表和相关说明，更新个人座右铭的国际化支持

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -59,7 +59,9 @@
       "nameZh": "Yu Changye",
       "nameAlias": "rabithua",
       "motto": "Trying hard to find a lifelong beloved career (or at least a job to make a living before savings run out).",
-      "mottoHighlight": "I don't want to be confined to programming; exploring UI & interaction design, how to become a photographer or a chef, while also learning to organize my life."
+      "mottoHighlight": "I don't want to be confined to programming; exploring UI & interaction design, how to become a photographer or a chef, while also learning to organize my life.",
+      "friendsTitle": "These are my friends 🪴",
+      "friendsNote": "* Some are old friends from the blogging era"
     }
   }
 }
