--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -59,7 +59,9 @@
       "nameZh": "于长野",
       "nameAlias": "rabithua",
       "motto": "努力寻找一生所爱的事业 （或者在存款耗尽前找到维持生计的工作）。",
-      "mottoHighlight": "不想被限定为程序开发，在探索 UI 和交互设计，如何成为摄影师或者大厨，同时也在学习如何整理好自己的生活。"
+      "mottoHighlight": "不想被限定为程序开发，在探索 UI 和交互设计，如何成为摄影师或者大厨，同时也在学习如何整理好自己的生活。",
+      "friendsTitle": "这些是我的朋友们 🪴",
+      "friendsNote": "* 部分是来自博客时代的旧友"
     }
   }
 }
